@@ -2,7 +2,7 @@ INCLUDES = $(LIBTINYMAIL_CFLAGS) -I. -I$(top_srcdir)
 
 lib_LTLIBRARIES = libtinymail-1.0.la
 
-private_headers = tny-idle-stopper-priv.h
+private_headers = tny-common-priv.h
 
 libtinymail_1_0_headers = \
 	tny-shared.h \
@@ -79,6 +79,7 @@ libtinymail_1_0_la_SOURCES = \
 	tny-merge-folder.c \
 	tny-combined-account.c \
 	tny-idle-stopper.c \
+	tny-progress-info.c \
 	$(private_headers)
 
 libtinymail_1_0_la_LIBADD = $(LIBTINYMAIL_LIBS)
