@@ -1,3 +1,8 @@
+2007-05-06  Philip Van Hoof  <pvanhoof@gnome.org>
+
+	* Moved some stuff around
+	* Created an internal API for status reporting
+
 2007-05-04  Philip Van Hoof  <pvanhoof@gnome.org>
 
 	* Changed the TnyGetMsgCallback function signature to have a cancelled 
